--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "faker": "^5.1.0",
     "jest": "^26.4.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7"
